# iced

./: Cargo.toml
.github/workflows/: check.yml
core/src/text/: editor.rs
examples/custom_shader/: Cargo.toml  index.html
examples/custom_shader/src/: main.rs  scene.rs
examples/custom_shader/src/scene/: pipeline.rs
examples/editor/src/: main.rs
graphics/src/text/: editor.rs
highlighter/: Cargo.toml
highlighter/src/: lib.rs
wgpu/src/: engine.rs  lib.rs  primitive.rs
