[package]
name = "iced_highlighter"
description = "A syntax highlighter for iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
iced_core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
syntect = { workspace = true, features = ["default-onig"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
syntect = { workspace = true, features = ["default-fancy"] }
